feat: finalize dynamic log filtering and project documentation
- Implement dynamic LogLevel filtering using user-provided arguments.
- Add robust input validation for log file paths and log levels.
- Standardize output directory structure for JSON and Text reports.
- Update README with comprehensive CLI usage, dependencies, and future roadmap.